objects/Policy_Reference__c/fields/Basic_Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Basic_Plan_Code__c</fullName>
    <label>Basic Plan Code</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>