objects/Policy_Reference__c/fields/Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Policy_Type__c</fullName>
    <label>Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRC</fullName>
            </value>
            <value>
                <fullName>GI</fullName>
            </value>
            <value>
                <fullName>GLH</fullName>
            </value>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>IND</fullName>
            </value>
            <value>
                <fullName>MAM</fullName>
            </value>
            <value>
                <fullName>WM</fullName>
            </value>
            <value>
                <fullName>Credit Life Insurance</fullName>
                <isActive>false</isActive>
                <label>Credit Life Insurance</label>
            </value>
            <value>
                <fullName>Interest Sensitive Whole Life</fullName>
                <isActive>false</isActive>
                <label>Interest Sensitive Whole Life</label>
            </value>
            <value>
                <fullName>Permanent Insurance</fullName>
                <isActive>false</isActive>
                <label>Permanent Insurance</label>
            </value>
            <value>
                <fullName>Term Insurance</fullName>
                <isActive>false</isActive>
                <label>Term Insurance</label>
            </value>
            <value>
                <fullName>Traditional Whole Life</fullName>
                <isActive>false</isActive>
                <label>Traditional Whole Life</label>
            </value>
            <value>
                <fullName>Variable Life</fullName>
                <isActive>false</isActive>
                <label>Variable Life</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>