objects/Policy_Reference__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Policy_Number__c</columns>
    <columns>Basic_Plan_Code__c</columns>
    <columns>Basic_Plan_Name__c</columns>
    <columns>Agent_Code__c</columns>
    <columns>Policy_Type__c</columns>
    <columns>Policy_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>